--- a/unpackaged/main/default/classes/SOM_BatchAnonymization_4_Test.cls
+++ b/unpackaged/main/default/classes/SOM_BatchAnonymization_4_Test.cls
@@ -9,8 +9,8 @@ public with sharing class SOM_BatchAnonymization_4_Test {
         List<OrderSummary> os = [SELECT Id, OriginalOrderId, Status, AccountId, (SELECT Id, Status FROM OrderItemSummaries) FROM OrderSummary WHERE Id = :los[0].id];
         os[0].Status = SOM_Constants.ORDER_SUMMARY_FULFILLED;
         update os[0];
-        List<OrderPaymentSummary> ordPaySumm = [SELECT Id, PaymentMethodId, OrderSummary.AccountId FROM OrderPaymentSummary WHERE OrderSummaryId = :los[0].id];
-        return ordPaySumm;
+        List<OrderPaymentSummary> ordPaySumm = [SELECT Id, PaymentMethodId, OrderSummary.AccountId, OrderSummary.OriginalOrderId FROM OrderPaymentSummary WHERE OrderSummaryId = :los[0].id];
+        return ordPaySumm; 
     }
 
     @isTest(seeAllData=true)
@@ -24,8 +24,10 @@ public with sharing class SOM_BatchAnonymization_4_Test {
         Map<String, List<String>> orderSummaryNumbers = new Map<String, List<String>>();
         List<String> cls = new List<String>();
         cls.add(paymentMethods[0].OrderSummary.AccountId);
+        List<String> OrdersID = new List<String>();
+        OrdersID.add(paymentMethods[0].OrderSummary.OriginalOrderId);
         Test.startTest();
-        SOM_BatchAnonymization_4 nextBatch = new SOM_BatchAnonymization_4(cardPayList, objectClientId, orderSummaryNumbers, cls);
+        SOM_BatchAnonymization_4 nextBatch = new SOM_BatchAnonymization_4(OrdersID,cardPayList, objectClientId, orderSummaryNumbers, cls);
         database.executebatch(nextBatch);
         Test.stopTest();
         List<CardPaymentMethod> cardPays = [SELECT Id, PaymentMethodStreet, Status FROM CardPaymentMethod WHERE Id IN :cardPayList];
